--- a/app/src/main/res/layout/activity_map.xml
+++ b/app/src/main/res/layout/activity_map.xml
@@ -7,7 +7,6 @@
     <FrameLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/fragment_container">
+        android:id="@+id/activity_map_fragment_container">
     </FrameLayout>
 </RelativeLayout>
-
