--- a/app/src/main/res/menu/map_fragment_toolbar.xml
+++ b/app/src/main/res/menu/map_fragment_toolbar.xml
@@ -1,4 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
-<menu xmlns:android="http://schemas.android.com/apk/res/android">
-
+<menu xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
+    <item
+        android:id="@+id/map_fragment_search_icon"
+        android:icon="@drawable/ic_search"
+        android:title="Search"
+        app:showAsAction="always" />
+    <item
+        android:id="@+id/map_fragment_filter_icon"
+        android:icon="@drawable/ic_filter"
+        android:title="Filter"
+        app:showAsAction="always"/>
+    <item
+        android:id="@+id/map_fragment_settings_icon"
+        android:icon="@drawable/ic_settings"
+        android:title="Settings"
+        app:showAsAction="always"/>
 </menu>
